.metadata/.plugins/org.eclipse.cdt.ui/primer_parcial.build.log
20:06:48 **** Incremental Build of configuration Debug for project primer_parcial ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L432xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:233:13: error: invalid storage class for function 'MX_GPIO_Init'
  233 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:298:1: error: expected declaration or statement at end of input
  298 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:49:13: warning: 'MX_GPIO_Init' used but never defined
   49 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:289:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  289 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:233:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  233 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:178:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  178 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

20:06:48 Build Failed. 3 errors, 4 warnings. (took 308ms)

